# task-PrimetradeAI

./: .env.example  .gitignore  README.md  cli.py  pyproject.toml  requirements.txt
bot/: __init__.py  client.py  dashboard.py  logging_config.py  orders.py  utils.py  validators.py  websocket_feed.py
tests/: test_client.py  test_orders.py  test_validators.py
